--- a/space.html
+++ b/space.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Space Chicks Burger</h1>
         <div class="icon-home">
-            <a href="index.html">
+            <a href="monchi.cl">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
                     viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                     <path
