--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <div class="count-products-cart">0</div>
             </div>
+            <div id="popup" class="popup">
+        <div class="popup-content">
+            <span class="close" id="closePopup">&times;</span>
+            <img src="img/ventana emergente.png" alt="Imagen Emergente" />
+        </div>
+    </div>
         </div>
         
     </header>
