--- a/space.html
+++ b/space.html
@@ -353,6 +353,13 @@
                     </div>
                 </div>
             </div>
+            <div class="whatsapp-container">
+                <a href="https://wa.me/+56930375518" class="whatsapp-icon" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src="img/logo whatsapp.png" alt="WhatsApp">
+                    Pide aquí
+                </a>
+            </div>
             <script src="space.js"></script>
 </body>
 
