--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monchi.cl</title>
     <link rel="icon" href="img/logo caja.jpg">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" 
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
-        crossorigin="anonymous" 
-        referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body class="body-home">
     <header>
         <div class="header container">
@@ -23,14 +23,13 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <div class="count-products-cart">0</div>
             </div>
-            <div id="popup" class="popup">
-        <div class="popup-content">
-            <span class="close" id="closePopup">&times;</span>
-            <img src="img/ventana emergente.png" alt="Imagen Emergente" />
         </div>
-    </div>
+        <div id="popup" class="popup">
+            <div class="popup-content">
+                <span class="close" id="closePopup">&times;</span>
+                <img src="img/ventana emergente.png" alt="Imagen Emergente" />
+            </div>
         </div>
-        
     </header>
 
     <div class="logos-home">
@@ -50,15 +49,14 @@
                 </li>
                 <li id="logo-ccs" class="clickeable">
                     <div class="logo-container">
-                        <a href="#"><img src="img/logo pizzas nel.jpeg" alt="pizzas nel" class="logo-img ccs"></a>
+                        <a href="#"><img src="img/logo pizzas nel.jpeg" alt="ccs" class="logo-img ccs"></a>
                         <a class="text-icom" href="#">Pizzas Nel</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </div>
-    
-    <script src="home.js"></script>
+
+    <script src="index.js"></script>
 
 </body>
-
